basic bootstrap layout setup

--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <title>Momentum CMS</title>
+  </head>
+  <body>
+
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Momentum CMS</h1>
+        <h2>A stylish CMS for responsible developers</h2>
+      </div>
+    </div>
+
+    <div class="container values">
+
+      <div class="row text-center">
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-globe"></span>
+          <h3>Multilingual</h3>
+          <p class="lead">Built from the ground up to handle multilingual sites.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-heart-empty"></span>
+          <h3>Developer Friendly</h3>
+          <p class="lead">Work on your site locally and commit to version control.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-cog"></span>
+          <h3>API Driven</h3>
+          <p class="lead">A perfect match for your front-end applications.</p>
+        </div>
+      </div><!-- .row -->
+
+      <hr>
+
+ <!--      <div class="row">
+        <div class="col-md-6">
+          <h3>Check out our project on Github</h3>
+          <p>Interested in contributing to an open source project? Swing by Github and give us a hand.</p>
+          <a href="https://github.com/MomentumCMS/momentum_cms" class="btn btn-primary">Github Repo</a>
+        </div>
+        <div class="col-md-6">
+          <h3>Feature Roadmap</h3>
+          <ul class="list-group">
+            <li class="list-group-item">Multilingual Content</li>
+            <li class="list-group-item">Site Fixtures (import/export)</li>
+            <li class="list-group-item">Revisions</li>
+            <li class="list-group-item">Publishing Flow</li>
+            <li class="list-group-item">API</li>
+            <li class="list-group-item">Liquid Templates</li>
+          </ul>
+        </div>
+      </div>
+
+ -->
+    </div>
+
+  </body>
+</html>
